# hunting_api

./: README.md  manage.py  pyproject.toml  pytests.ini
authentication/: models.py  serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py
hunting_api/: asgi.py  settings.py  urls.py  wsgi.py
test/: conftest.py  fixture.py  simple_test.py
test/vacancies/: test_create_vacancy.py  vacansy_test_list.py
vacancies/: models.py  permission.py  serializer.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_min_experience.py
